build/log/idf_py_stderr_output_60778
In file included from /Users/denniskountouris/Desktop/esp-idf/projects/lcd-wifi-controller-simple/main/led-strip-handler.c:1:
/Users/denniskountouris/Desktop/esp-idf/projects/lcd-wifi-controller-simple/main/led-strip-handler.c: In function 'turn_off_led':
/Users/denniskountouris/Desktop/esp-idf/projects/lcd-wifi-controller-simple/main/include/led-strip-handler.h:4:29: error: expected ')' before ';' token
    4 | #define LCD_STATUS_ON 1 << 0;
      |                             ^
/Users/denniskountouris/Desktop/esp-idf/projects/lcd-wifi-controller-simple/main/led-strip-handler.c:24:30: note: in expansion of macro 'LCD_STATUS_ON'
   24 |     if((lcd_current_status & LCD_STATUS_ON) == 0){
      |                              ^~~~~~~~~~~~~
/Users/denniskountouris/Desktop/esp-idf/projects/lcd-wifi-controller-simple/main/lcd-wifi-controller-simple.c: In function 'app_main':
/Users/denniskountouris/Desktop/esp-idf/projects/lcd-wifi-controller-simple/main/lcd-wifi-controller-simple.c:38:20: warning: unused variable 'http_server' [-Wunused-variable]
   38 |     httpd_handle_t http_server = start_webserver();
      |                    ^~~~~~~~~~~
/Users/denniskountouris/Desktop/esp-idf/projects/lcd-wifi-controller-simple/main/led-strip-handler.c:24:8: note: to match this '('
   24 |     if((lcd_current_status & LCD_STATUS_ON) == 0){
      |        ^
In file included from /Users/denniskountouris/Desktop/esp-idf/projects/lcd-wifi-controller-simple/main/led-strip-handler.c:1:
/Users/denniskountouris/Desktop/esp-idf/projects/lcd-wifi-controller-simple/main/led-strip-handler.c: In function 'turn_on_led':
/Users/denniskountouris/Desktop/esp-idf/projects/lcd-wifi-controller-simple/main/include/led-strip-handler.h:4:29: error: expected ')' before ';' token
    4 | #define LCD_STATUS_ON 1 << 0;
      |                             ^
/Users/denniskountouris/Desktop/esp-idf/projects/lcd-wifi-controller-simple/main/led-strip-handler.c:32:30: note: in expansion of macro 'LCD_STATUS_ON'
   32 |     if((lcd_current_status & LCD_STATUS_ON) != 0){
      |                              ^~~~~~~~~~~~~
/Users/denniskountouris/Desktop/esp-idf/projects/lcd-wifi-controller-simple/main/led-strip-handler.c:32:8: note: to match this '('
   32 |     if((lcd_current_status & LCD_STATUS_ON) != 0){
      |        ^
/Users/denniskountouris/Desktop/esp-idf/projects/lcd-wifi-controller-simple/main/led-strip-handler.c:37:53: error: 'r' undeclared (first use in this function)
   37 |         led_strip_set_pixel(led_strip, i, (uint32_t)r, (uint32_t)g, (uint32_t)b);
      |                                                     ^
/Users/denniskountouris/Desktop/esp-idf/projects/lcd-wifi-controller-simple/main/led-strip-handler.c:37:53: note: each undeclared identifier is reported only once for each function it appears in
/Users/denniskountouris/Desktop/esp-idf/projects/lcd-wifi-controller-simple/main/led-strip-handler.c:37:66: error: 'g' undeclared (first use in this function)
   37 |         led_strip_set_pixel(led_strip, i, (uint32_t)r, (uint32_t)g, (uint32_t)b);
      |                                                                  ^
/Users/denniskountouris/Desktop/esp-idf/projects/lcd-wifi-controller-simple/main/led-strip-handler.c:37:79: error: 'b' undeclared (first use in this function)
   37 |         led_strip_set_pixel(led_strip, i, (uint32_t)r, (uint32_t)g, (uint32_t)b);
      |                                                                               ^
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/led-strip-handler.c.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
/Users/denniskountouris/Desktop/esp-idf/projects/lcd-wifi-controller-simple/main/http-server-handler.c: In function 'get_handler':
/Users/denniskountouris/Desktop/esp-idf/projects/lcd-wifi-controller-simple/main/http-server-handler.c:46:24: error: expected identifier or '(' before '[' token
   46 |                 uint8_t[4] dat;
      |                        ^
/Users/denniskountouris/Desktop/esp-idf/projects/lcd-wifi-controller-simple/main/http-server-handler.c:47:13: warning: no semicolon at end of struct or union
   47 |             } col_val = {0};
      |             ^
/Users/denniskountouris/Desktop/esp-idf/projects/lcd-wifi-controller-simple/main/http-server-handler.c:50:27: error: 'dat' undeclared (first use in this function)
   50 |             set_led_color(dat[0], dat[1], dat[2]);
      |                           ^~~
/Users/denniskountouris/Desktop/esp-idf/projects/lcd-wifi-controller-simple/main/http-server-handler.c:50:27: note: each undeclared identifier is reported only once for each function it appears in
/Users/denniskountouris/Desktop/esp-idf/projects/lcd-wifi-controller-simple/main/http-server-handler.c:47:15: warning: variable 'col_val' set but not used [-Wunused-but-set-variable]
   47 |             } col_val = {0};
      |               ^~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/http-server-handler.c.obj] Error 1
make[1]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [all] Error 2
